--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,23 @@ img {
   display: block;
   max-width: 100%;
 }
+
+/* for timer */
+.timer {
+  display: flex;
+  column-gap: 12px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  line-height: 1.2;
+}
+.value {
+  font-size: 44px;
+}
+.label {
+  text-transform: uppercase;
+  font-size: 16px;
+}
