--- a/src/css/common.css
+++ b/src/css/common.css
@@ -25,7 +25,6 @@ img {
 .field {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
   line-height: 1.2;
 }
@@ -35,4 +34,15 @@ img {
 .label {
   text-transform: uppercase;
   font-size: 16px;
+}
+
+/* for promises */
+.field-promises {
+  display: flex;
+  flex-direction: column;
+}
+.btn-form-promises {
+  display: block;
+  margin-top: 24px;
+  height: 22px;
 }
